test/files/neg/t2462a.scala
object Test {
  List(1,2,3).map[Int, List[String]](x => 1)
}